updated stylesheet reference

--- a/emote_not_found.html
+++ b/emote_not_found.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <HTML>
-<link type="text/css" rel="stylesheet" href="https://www.dropbox.com/s/g2n029qxp7j7jam/stylesheet.css">
+<link type="text/css" rel="stylesheet" href="stylesheet.css">
 <script type="text/javascript"></script>
 <head>
 <title>e.mote survey not found</title>
